test/Fail/AnonymousRecConstrInline.err
AnonymousRecConstrInline.agda:21.5-9: error: [UnequalTerms]
t1 != t2 of type R
when checking that the expression refl has type t1 ≡ t2
